# saas-factory

./: .env.example  .env.sample  .gitignore  README.md  docker-compose.yml  start.sh  test_redis.py
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_response_tests.py  run_response_utils_tests.py  test_api_responses.py
backend/alembic/: env.py
backend/alembic/versions/: 2fbd9033a2af_add_tenant_rls.py  add_billing_models.py  add_email_verification.py  add_notifications.py  add_supabase_uid_to_users.py
backend/app/: main.py
backend/app/core/: dependencies.py  middleware.py
backend/app/core/api/: __init__.py  pagination.py  responses.py
backend/app/core/config/: config.py  settings.py
backend/app/core/db/: README.md  base.py  redis.py  repository.py  session.py
backend/app/core/errors/: exceptions.py  handlers.py
backend/app/core/integrations/: __init__.py  n8n.py
backend/app/core/security/: auth.py  (+3 more)
backend/docs/: STEP1-BACKEND-SERVICE-LAYER.md  STEP2-WORKFLOW-AUTOMATION.md  STEP3-PAYMENT-PROCESSING.md  STEP4-FRONTEND-AUTH-INTEGRATION.md
backend/scripts/: create_initial_data.py  run-migrations.sh
backend/tests/: conftest.py  direct_test_supabase.py  simple_conftest.py  simple_test.py  test_basic.py  test_settings.py  test_users.py
backend/tests/api/: test_api_response_format.py  test_auth_endpoints.py  test_health.py  test_response_format.py
backend/tests/unit/: test_api_response_utils.py  test_auth_service.py  test_n8n_integration.py  test_supabase_auth.py  test_supabase_auth_simple.py  test_tenant_isolation.py
(+164 files in other folders)
